# Slopinator

./: index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
assets/: index-BudopPOR.css  index-Cj43wMZJ.js  slopinator_wasm_bg-D3e4WuMW.wasm  worker-BmjZUPnu.js
src/: main.js  styles.css  virtual-scroll.js  worker.js
src-wasm/: Cargo.toml
src-wasm/src/: chunk_cache.rs  lib.rs  line_index.rs  search.rs
