[package]
name = "slopinator-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly core engine for the Slopinator log file browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[profile.release]
opt-level = "s"
lto = true
